bk_ida/gobmkida/c2/dfa_shuffle
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dfa_shuffle/src/patterns/dfa.c:1512:12: error: expected expression
*( _OWORD *)&v26[v28] = *( _OWORD *)&next[v28 / 4]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dfa_shuffle/src/patterns/dfa.c:1512:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v26[v28] = *( _OWORD *)&next[v28 / 4]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dfa_shuffle/src/patterns/dfa.c:1512:36: error: expected expression
*( _OWORD *)&v26[v28] = *( _OWORD *)&next[v28 / 4]; 
                                   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dfa_shuffle/src/patterns/dfa.c:1512:28: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v26[v28] = *( _OWORD *)&next[v28 / 4]; 
                           ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dfa_shuffle/src/obj/3/dfa.o] Error 1
